<resources>
    <string name="app_name">D&amp;D Ascension</string>
    <string name="placeholder">Placeholder</string>
    <string name="placeholder_mod">+2</string>
    <string name="placeholder_number">10</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="title_api_error">Error From API</string>
    <string name="title_form_error">Invalid Form</string>

    <string name="action_authentication_sign_in">Sign In</string>
    <string name="hint_authentication_email">Email</string>
    <string name="hint_authentication_password">Password</string>

    <string name="action_assets_armor">Armor</string>
    <string name="action_assets_backgrounds">Backgrounds</string>
    <string name="action_assets_classes">Classes</string>
    <string name="action_assets_feats">Feats</string>
    <string name="action_assets_races">Races</string>
    <string name="action_assets_spells">Spells</string>
    <string name="action_assets_weapons">Weapons</string>

    <string name="label_name">Name:</string>
    <string name="label_description">Description:</string>
    <string name="label_casting_time">Casting Time:</string>
    <string name="label_range">Range:</string>
    <string name="label_components">Components:</string>
    <string name="label_duration">Duration:</string>
    <string name="label_higher_levels">Higher Levels:</string>
    <string name="hint_name">Name</string>
    <string name="hint_description">Description</string>
    <string name="label_level">Level:</string>
    <string name="label_school">School:</string>
    <string name="label_ritual">Ritual:</string>
    <string name="label_armor_class">Armor Class (AC):</string>
    <string name="label_strength">Strength:</string>
    <string name="label_stealth">Stealth:</string>
    <string name="label_weight">Weight:</string>
    <string name="label_cost">Cost:</string>
    <string name="label_type">Type:</string>
    <string name="label_properties">Properties:</string>
    <string name="label_damage">Damage:</string>
    <string name="label_speed">Speed:</string>
    <string name="label_race_traits">Race Traits</string>
    <string name="label_subraces">Subraces</string>
    <string name="label_str">STR:</string>
    <string name="label_dex">DEX:</string>
    <string name="label_con">CON:</string>
    <string name="label_intel">INT:</string>
    <string name="label_wis">WIS:</string>
    <string name="label_cha">CHA:</string>
    <string name="label_level_acquired">Level Acquired:</string>
    <string name="label_hit_die">Hit Die:</string>
    <string name="label_saving_throws">Saving Throws</string>
    <string name="label_class_traits">Class Traits</string>
    <string name="label_subclasses">Subclasses</string>
    <string name="title_activity_characters">CharactersActivity</string>
    <string name="title_activity_character">CharacterActivity</string>
    <string name="label_information">Information</string>
    <string name="armor_class">Armor Class</string>
    <string name="initiative">Initiative</string>
    <string name="speed">Speed</string>
    <string name="ability_scores">Ability Scores</string>
    <string name="strength">Strength</string>
    <string name="placeholder_ability_score">+2 (15)</string>
    <string name="dexterity">Dexterity</string>
    <string name="constitution">Constitution</string>
    <string name="intelligence">Intelligence</string>
    <string name="wisdom">Wisdom</string>
    <string name="charisma">Charisma</string>
    <string name="saving_throws">Saving Throws</string>
    <string name="skills">Skills</string>
    <string name="acrobatics">Acrobatics</string>
    <string name="animal_handling">Animal Handling</string>
    <string name="arcana">Arcana</string>
    <string name="deception">Deception</string>
    <string name="history">History</string>
    <string name="insight">Insight</string>
    <string name="investigation">Investigation</string>
    <string name="medicine">Medicine</string>
    <string name="nature">Nature</string>
    <string name="performance">Performance</string>
    <string name="persuasion">Persuasion</string>
    <string name="sleight_of_hand">Sleight of Hand</string>
    <string name="stealth">Stealth</string>
    <string name="survival">Survival</string>
    <string name="label_caster">Caster:</string>
    <string name="label_race">Race:</string>
    <string name="label_class">Class:</string>
    <string name="label_subclass">Subclass:</string>
    <string name="label_subrace">Subrace:</string>
    <string name="label_background">Background:</string>
    <string name="race_traits">Race Traits</string>
    <string name="class_traits">Class Traits</string>
    <string name="background">Background</string>
    <string name="armor">Armor</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="spells">Spells</string>
    <string name="weapons">Weapons</string>
    <string name="title_activity_campaigns">CampaignsActivity</string>
    <string name="invite_users">Invite Users</string>
</resources>
