<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.dndascension.activities.AssetsActivity">
    <item
        android:id="@+id/action_assets_armor"
        android:orderInCategory="100"
        android:title="@string/action_assets_armor"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_assets_backgrounds"
        android:orderInCategory="200"
        android:title="@string/action_assets_backgrounds"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_assets_classes"
        android:orderInCategory="300"
        android:title="@string/action_assets_classes"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_assets_feats"
        android:orderInCategory="400"
        android:title="@string/action_assets_feats"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_assets_races"
        android:orderInCategory="500"
        android:title="@string/action_assets_races"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_assets_spells"
        android:orderInCategory="600"
        android:title="@string/action_assets_spells"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_assets_weapons"
        android:orderInCategory="700"
        android:title="@string/action_assets_weapons"
        app:showAsAction="never" />
</menu>
