<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_speed"
            android:textColor="@color/colorBlackText"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/race_speed"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:text="@string/placeholder"
            android:textColor="@color/colorBlackText"
            android:textSize="16sp" />
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="6"
        android:orientation="horizontal"
        android:padding="4dp"
        android:rowCount="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_str"
                android:textColor="@color/colorBlackText"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/race_str"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_mod"
                android:textColor="@color/colorBlackText"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_dex"
                android:textColor="@color/colorBlackText"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/race_dex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_mod"
                android:textColor="@color/colorBlackText"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_con"
                android:textColor="@color/colorBlackText"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/race_con"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_mod"
                android:textColor="@color/colorBlackText"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_intel"
                android:textColor="@color/colorBlackText"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/race_intel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_mod"
                android:textColor="@color/colorBlackText"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_wis"
                android:textColor="@color/colorBlackText"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/race_wis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_mod"
                android:textColor="@color/colorBlackText"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_cha"
                android:textColor="@color/colorBlackText"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/race_cha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_mod"
                android:textColor="@color/colorBlackText"
                android:textSize="16sp" />
        </LinearLayout>
    </GridLayout>

    <TextView
        android:id="@+id/race_traits_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_race_traits"
        android:textColor="@color/colorBlackText"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/race_traits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:scrollbars="none"
        tools:listitem="@layout/item_text_link" />

    <TextView
        android:id="@+id/race_subraces_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:text="@string/label_subraces"
        android:textColor="@color/colorBlackText"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/race_subraces"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:scrollbars="none"
        tools:listitem="@layout/item_text_link" />

</LinearLayout>
