<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_casting_time"
            android:textColor="@color/colorBlackText"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/spell_casting_time"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:text="@string/placeholder"
            android:textColor="@color/colorBlackText"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_range"
            android:textColor="@color/colorBlackText"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/spell_range"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:text="@string/placeholder"
            android:textColor="@color/colorBlackText"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_components"
            android:textColor="@color/colorBlackText"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/spell_components"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:text="@string/placeholder"
            android:textColor="@color/colorBlackText"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_duration"
            android:textColor="@color/colorBlackText"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/spell_duration"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:text="@string/placeholder"
            android:textColor="@color/colorBlackText"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/spell_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/placeholder"
        android:textColor="@color/colorBlackText"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/label_higher_levels"
        android:textColor="@color/colorBlackText"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/spell_higher_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"
        android:textColor="@color/colorBlackText"
        android:textSize="16sp" />
</LinearLayout>
