<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_armor_class"
            android:textColor="@color/colorBlackText"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/armor_class"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:text="@string/placeholder"
            android:textColor="@color/colorBlackText"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_cost"
            android:textColor="@color/colorBlackText"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/armor_cost"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:text="@string/placeholder"
            android:textColor="@color/colorBlackText"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_strength"
            android:textColor="@color/colorBlackText"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/armor_strength"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:text="@string/placeholder"
            android:textColor="@color/colorBlackText"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_stealth"
            android:textColor="@color/colorBlackText"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/armor_stealth"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:text="@string/placeholder"
            android:textColor="@color/colorBlackText"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_weight"
            android:textColor="@color/colorBlackText"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/armor_weight"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:text="@string/placeholder"
            android:textColor="@color/colorBlackText"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/armor_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/placeholder"
        android:textColor="@color/colorBlackText"
        android:textSize="16sp" />

</LinearLayout>
